@@ -1,11 +1,16 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.913 2011-03-30 01:30:40 jluis Exp $
+	$Id: ChangeLog,v 1.914 2011-03-30 03:58:42 guru Exp $
 -----------------------------------------------------------------------------------------
 
 2011-03-30	jluis
 	* gmt_esri_io.c:	Also detects the Arc/Info float binary format (GRIDFLOAT)
 
-2011-03-28	remkko
+2011-03-29	pwessel
+	* surface_func.c:	Improved gridding of pixel-registered grids by temporarily adding
+				an extra row/col (which are removed before output).  This ensures
+				better factoring throughout the multigrid process.
+
+2011-03-28	remko
 	* gmt_init.c:		New format of -i option: -i<cols>[l][s<scale>][o<offset][,...].
 	* common_options.txt, explain_-icols_full.txt, gmt_synopsis.h:	---"---
 
